# CGen

./: CMakeLists.txt  CTMLCompiler.cpp  CTMLCompiler.hpp  CTMLCore.cpp  CTMLCore.hpp  CTMLGraph.cpp  CTMLGraph.hpp  CTMLManager.cpp  CTMLManager.hpp  CTMLParser.cpp  CTMLParser.hpp  FileReader.cpp  FileReader.hpp  FileSystem.cpp  FileSystem.hpp  LICENSE  Main.cpp  README.md  main.cpp  main.hpp  make_vs.bat
ctml/UniTheaterDesignTemplates/: ReadMe.txt  carousel.ctml  index.ctml
ctml/UniTheaterDesignTemplates/Navbar/: navContent.ctml  navbarBottom.ctml  navbarTop.ctml
ctml/UniTheaterDesignTemplates/contentTemplates/: archiv.ctml  contentHeader.ctml  indexContent.ctml
ctml/UniTheaterDesignTemplates/contentTemplates/AboutUs/: aboutUs.ctml  aboutUsContent.ctml
ctml/UniTheaterDesignTemplates/contentTemplates/Calender/: calendar.ctml  calendarContent.ctml  calender.ctml  calenderContent.ctml
ctml/UniTheaterDesignTemplates/contentTemplates/CurrentProjects/: currentProjects.ctml
ctml/UniTheaterDesignTemplates/contentTemplates/Team/: team.ctml  teamSingleEntry.ctml
ctml/UniTheaterDesignTemplates/contentTemplates/friends/: friends.ctml  singleFriend.ctml
precompiles/: index.csv  index.xlsx
